overflow clip fix

--- a/framework/css/framework.css
+++ b/framework/css/framework.css
@@ -1,5 +1,5 @@
 /*---------- FRAMEWORK ----------*/
-html {
+html, iframe, img {
     overflow: clip !important
 }
 
